# zerra

./: .gitignore  Cargo.toml  LICENSE  README.md  Shuttle.toml  bacon.toml
backend/: Cargo.toml  build.rs
backend/migrations/: 20250422152239_init.sql
backend/src/: env.rs  main.rs  routes.rs  utils.rs
backend/src/models/: authenticated.rs  conduction.rs  error.rs  transcription.rs  unauthenticated.rs  user.rs
backend/src/routes/: api.rs  auth.rs
docs/: Conduction.md
frontend/: .prettierrc  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: i18n.ts  index.css  main.tsx  model.ts  routeTree.gen.ts
frontend/src/api/: edit.ts  list.ts  participate.ts
frontend/src/fragments/: Message.tsx  Navbar.tsx  QueryCard.tsx  Reload.tsx  Toast.tsx  WithSpinner.tsx
frontend/src/i18n/: bn.json  en.json
frontend/src/routes/: attend.$uuid.tsx  conduct.$uuid.tsx  edit.$uuid.tsx  index.tsx  login.tsx
frontend/src/utils/: debouncer.ts
frontend/src/utils/immer-yjs/: immer-yjs.test.ts  immer-yjs.ts  index.ts  sample-data.ts  types.ts  util.ts
tokape/: Cargo.toml  README.md
tokape/src/: lib.rs
types/: Cargo.toml
types/bindings/: ListItem.ts  MessageFromAttendee.ts  MessageFromConductor.ts  MessageToClient.ts  Metadata.ts  Progress.ts  Query.ts  QueryStatus.ts  SessionDescriptor.ts  Zerra.ts
types/src/: lib.rs  zerra.rs
