[package]
name = "backend"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["attachment", "cookie"] }
axum-login = "0.18.0"
dashmap = "6.1.0"
futures-util = "0.3.31"
listenfd = "1.0.2"
password-auth = "1.0.0"
rand = "0.9.2"
rmp-serde = "1.3.0"
scopeguard = "1.2.0"
serde = "1.0.219"
serde_yml = "0.0.12"
shuttle-axum = "0.56.0"
shuttle-runtime = "0.56.0"
shuttle-shared-db = { version = "0.56.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.6", features = [
  "derive",
  "macros",
  "migrate",
  "postgres",
] }
thiserror = "2.0.12"
tokape.path = "../tokape"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
  "compression-gzip",
  "fs",
  "timeout",
  "trace",
] }
tower-sessions = { version = "0.14.0", default-features = false, features = [
  "signed",
] }
tower-sessions-moka-store = { version = "0.15.0" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
types.path = "../types"
uuid = { version = "1.17.0", features = ["v4"] }
